# ros2_vosk_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: SpeechRecognition.msg
srv/: SpeechRecognitionWord.srv
