<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_vosk_msgs</name>
  <version>2.1.21</version>
  <description>Message definitions for ros2_vosk</description>
  <url type="website">https://pypi.python.org/pypi/vosk/</url>

  <maintainer email="contact@alphacephei.com">Alpha Cephei Inc.</maintainer>
  <maintainer email="an.antikatzidis@gmail.com">Angelo Antikatzidis</maintainer>
  <license>Apache 2</license>
  <author email="an.antikatzidis@gmail.com">Angelo Antikatzidis.</author>
  <author email="contact@alphacephei.com">Alpha Cephei Inc.</author>
  <author email="agrigo2001@yahoo.com.au">Adrian Grigo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
